Fix event card on mobile safari

--- a/src/components/EventCard/EventCard.module.scss
+++ b/src/components/EventCard/EventCard.module.scss
@@ -27,7 +27,7 @@ $dateOffset: 20px;
     left: 0;
     right: 0;
     height: 150px;
-    background: linear-gradient(transparent 0%, #FFF 80%);
+    background: linear-gradient(rgba($white, 0) 0%, $white 80%);
   }
 }
 
